--- a/templates/pages/index.html
+++ b/templates/pages/index.html
@@ -2,6 +2,8 @@
 {% load static %}
 {% load humanize %}
 
+{% block title %} | Welcome{% endblock %}
+
 {% block content %}
 <!-- Showcase -->
   <section id="showcase">
@@ -65,6 +67,10 @@
       </div>
     </div>
   </section>
+
+  <br>
+  <!-- Alerts -->
+  {% include 'partials/_alerts.html' %}
 
   <!-- Listings -->
   <section id="listings" class="py-5">
