--- a/templates/partials/_navbar.html
+++ b/templates/partials/_navbar.html
@@ -52,9 +52,11 @@
                 <li class="nav-item mr-3">
                     <a href="javascript:{document.getElementById('logout').submit()}" 
                     class="nav-link">
-                        <i class="fas fa-sign-out-alt"></i> Logout</a>
+                        <i class="fas fa-sign-out-alt"></i> Logout
+                    </a>
                     <form action="{% url 'logout' %}" method="POST" id="logout">
                     {% csrf_token %}
+                    </form>
                     <input type="hidden">
                 </li>
             {% else %}
