Update README (minor branch for testing PR)

--- a/templates/base.html
+++ b/templates/base.html
@@ -25,8 +25,8 @@
 
     <!-- Nav bar -->
     {% include 'partials/_navbar.html' %}
-    
 
+    <!-- Main content -->
     {% block content %} {% endblock %}
     
     <!-- Footer -->
